@@ -9,6 +9,7 @@
 		<setting id="minimum_rating" label="32907" type="slider" option="int" default="5" range="0,1,10" />
 		<setting label="32052" type="lsep" />
 		<setting id="set_autoaddepisodes" label="32400" type="action" action="RunScript(script.artwork.beef, command=set_autoaddepisodes)" />
+		<setting label="Fix season landscape image URLs with spaces (for upgrades from pre v0.7.0)" type="action" action="RunScript(script.artwork.beef, command=fix_urlswithspaces)" />
 	</category>
 	<category label="$LOCALIZE[20343]">
 		<setting label="32053" type="lsep" />
